@@ -205,6 +205,9 @@ PHP if you have not done so prior to upgrading MediaWiki.
   since length can vary by localization.
 * (bug 28242) Make redirects generated by urls containing a local interwiki
   prefix be a 301 instead of a 302.
+* (bug 15641) blocked administrators are now prevented from deleting or protecting
+  their own talk page; and all blocked users are more comprehensively prevented
+  from performing other actions
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
